<resources>
    <string name="app_name">Erevu</string>
    <string name="facebook_app_id">182331315660749</string>
    <string name="fb_login_protocol_scheme">fb182331315660749</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_answers">AnswersActivity</string>

    <string name="tags_prompt">Choose a Topic</string>

    <string-array name="tags_arrays">
        <item>Select a topic</item>
        <item>Random</item>
        <item>Math</item>
        <item>Economics</item>
        <item>Computer Science</item>
        <item>Languages</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Aviation</item>
        <item>Health Science</item>
    </string-array>

    <string name="tag_prompt">Filter</string>

    <string-array name="tag_arrays">
        <item>Newest</item>
        <item>Hot</item>
        <item>Votes</item>
        <item>Unanswered</item>
        <item>Languages</item>
    </string-array>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>

    <string name="slide_1_title">Q &amp; A PLATFORM</string>
    <string name="slide_1_desc">Erevu, We are a question and answer platform. users gain points when there answers/question get voted up. Remember, users with high points enjoy more privileges on the platform. </string>

    <string name="slide_2_title">INFORMATION SHARING</string>
    <string name="slide_2_desc">Erevu lets you get the satisfaction of helping other people with useful information and exchanging ideas. Remember, the more questions you answer the more votes you are likely to earn</string>

    <string name="slide_3_title">FEEDBACK OPINION</string>
    <string name="slide_3_desc">Erevu discussion forums lets you get more feedback on a specific subject through group chat and push notifications in your inbox when someone answers a question you posted.</string>

    <string name="slide_4_title">FIND ANSWER</string>
    <string name="slide_4_desc">You can easly find an answer by searching for it because chances of it being asked before is high. Remember to vote up a question/answer if you find it useful! &amp; have fun gaining knowledge.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_view_user_profile">ViewUserProfileActivity</string>
    <string name="hint_email">New Email</string>
    <string name="hint_new_email">New Password</string>
    <string name="new_pass">New Password</string>
    <string name="btn_change">Change Email</string>
    <string name="btn_change_pass">Change Password</string>
    <string name="btn_send">Send Password Reset Email</string>
    <string name="btn_remove">Remove User</string>
    <string name="title_activity_take_camera_shot">TakeCameraShotActivity</string>
    <string name="title_activity_post_answer2">PostAnswer2Activity</string>
    <string name="Username">\@Username</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_edit_channel">EditChannelActivity</string>
    <string name="title_activity_edit_wallpaper">EditWallpaperActivity</string>
</resources>
